# talkmm

./: ProjectHome.md  readme
libjingle/: Makefile.am  Makefile.in  aclocal.m4  configure.scan
libjingle-0.4.0/autom4te.cache/: output.0  traces.0
libjingle-0.4.0/talk/base/: asynctcpsocket.cc  host.cc  logging.cc  stream.cc  stringutils.h  virtualsocket_unittest.cc
libjingle-0.4.0/talk/examples/: Makefile.am
libjingle-0.4.0/talk/p2p/: Makefile.in
libjingle-0.4.0/talk/session/: Makefile.in
libjingle-0.4.0/talk/xmpp/: Makefile.in
libjingle/autom4te.cache/: output.1  output.2  traces.2
libjingle/talk/: Makefile.in
libjingle/talk/base/: asynctcpsocket.cc  bytebuffer.cc  cryptstring.h  logging.cc  messagequeue.h  socketadapters.cc  stream.cc  streamutils.cc  stringencode.cc  virtualsocket_unittest.cc
talkmm/: HOW_TO_INSTALL  Makefile  Makefile.am  Makefile.b  Makefile.in  aclocal.m4  config.h.in  config.status  configure  configure.in  configure.in-back  libtool  readme
talkmm/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
talkmm/data/: Makefile  Makefile.am  Makefile.in  main_window.glade  msg_window.glade  setting_window.glade  talkmm.desktop  talkmm.desktop.in
talkmm/data/images/: Makefile  Makefile.am  Makefile.in
talkmm/po/: Makefile  Makefile.in  POTFILES  talkmm.pot  zh_CN.gmo  zh_CN.po
talkmm/src/: BuddyView.cc  BuddyView.h  BuddyView.hh  MainWindow.cc  MainWindow.h  Makefile  Makefile.am  Makefile.am-back  Makefile.in  MsgWindow.cc  MsgWindow.h  SettingWindow.cc  TrayIcon.cc  TreeModelDnd.cc  TreeViewTooltips.cc  callclient.h  chatclient.cc  console.cc  fileclient.cc  main.cc  pixmaps.h  talk  xwebkit.cc  xwebkit.h
talkmm/src/.deps/: talkmm-BuddyView.Po  talkmm-MsgWindow.Po  talkmm-TrayIcon.Po  talkmm-TreeModelDnd.Po  talkmm-TreeViewTooltips.Po  talkmm-console.Po  talkmm-fileclient.Po  talkmm-pixmaps.Po  talkmm-talkmm.Po  talkmm-tinystr.Po  talkmm-tinyxmlerror.Po
talkmm/src/config/: rwxml.cc
talkmm/talk/: Makefile.am  Makefile.in
talkmm/talk/base/: Makefile.in  bytebuffer.cc  criticalsection.h  httpcommon.cc  socketadapters.cc  stream.cc  task.h  urlencode.cc
talkmm/talk/chat/: Makefile.in
talkmm/talk/examples/: Makefile.am
talkmm/talk/examples/pcp/: Makefile.am  Makefile.in  file-back.cpp  glooxbot.cpp
talkmm/talk/examples/talkmm/: BuddyView.cc  BuddyView.h  MVC.h  MainWindow.cc  MainWindow.h  Makefile.am  Makefile.in  MsgWindow.cc  MsgWindow.h  TreeModelDnd.cc  TreeViewTooltips.cc  callclient.cc  callclient.h  config.xml  console.cc  console.h  define.h  fileclient.cc  fileclient.h  main.cc  main_window.glade  msg_window.glade  talkmm.cc  talkmm.h
talkmm/talk/examples/xxpalk/: Makefile.in
talkmm/talk/examples/xxpalk/xxpalk_ui/ui/: NodeInfo.java
talkmm/talk/login/: Makefile.in  presencepushtask.cc  xmppsocket.cc  xmppthread.h
talkmm/talk/p2p/: Makefile.in
talkmm/talk/p2p/base/: Makefile.in  stunserver_unittest.cc
talkmm/talk/p2p/client/: Makefile.in  sessionmanagertask.h
talkmm/talk/session/fileshare/: Makefile.am  Makefile.in
talkmm/talk/session/phone/: Makefile.am  call.cc  phonesessionclient.cc  voicechannel.cc  voicechannel.h
talkmm/talk/xmllite/: Makefile.in
trunk/: readme
trunk/libjingle/: Makefile.am  configure  configure.ac
trunk/libjingle-0.4.0/: Makefile.in  aclocal.m4  configure
trunk/libjingle/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
trunk/libjingle/talk/base/: Makefile.in  asynctcpsocket.cc  host.cc  httpbase.cc  openssladapter.cc  physicalsocketserver.cc  stream.cc  stringutils.h
trunk/libjingle/talk/chat/: Makefile.in  chattask.cc
trunk/libjingle/talk/examples/pcp/: fileclient.h.bak  main.cc  pcp_main.cc  test.cc
trunk/libjingle/talk/examples/talkmm/: MsgBox.cc  TagList.cc  TreeModelDnd.h  Unit.cc  Unit.h  chatclient.h  fileclient.h  main.cc  pixmaps.h
trunk/libjingle/talk/examples/talkmm/themes/Cillop-Midnite/gtk-2.0/: gtkrc
trunk/libjingle/talk/examples/xxpalk/: Makefile.in.b  XXPalk_ui  call_main.cc_c  callclient.cc
trunk/libjingle/talk/examples/xxpalk/xxpalk_ui/ui/: ChatWindow.java  XXPalkMainFrame.java
trunk/libjingle/talk/login/: Makefile.am  Makefile.in  jingleinfotask.cc  presenceouttask.cc  presenceouttask.h  xmppthread.cc
trunk/libjingle/talk/p2p/: Makefile.in
trunk/libjingle/talk/p2p/base/: Makefile.in  stun.cc  stunserver.cc  stunserver_main.cc
trunk/libjingle/talk/session/: Makefile.in
trunk/libjingle/talk/session/fileshare/: Makefile.in  fileshare.cc
trunk/libjingle/talk/session/phone/: Makefile.in  call.h
trunk/libjingle/talk/session/tunnel/: Makefile.in
trunk/libjingle/talk/xmpp/: Makefile.in  saslplainmechanism.h  xmppclient.cc
trunk/talkmm/: Makefile  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.in  libtool
trunk/talkmm/src/: BuddyView.h  MainWindow.cc  MainWindow.h  Makefile  Makefile.am  Makefile.in  MsgBox.h  MsgWindow.cc  MsgWindow.h  SettingWindow.h  TreeViewTooltips.h  Unit.cc  callclient.cc  console.cc  console.h  define.h  main.cc  settings.cc  settings.hh
trunk/talkmm/src/.deps/: talkmm-MainWindow.Po  talkmm-MsgBox.Po  talkmm-TagList.Po  talkmm-Unit.Po  talkmm-callclient.Po  talkmm-chatclient.Po  talkmm-main.Po  talkmm-rwxml.Po  talkmm-tinyxml.Po  talkmm-tinyxmlparser.Po
trunk/talkmm/talk/examples/talkmm/: BuddyView.cc  BuddyView.h  MVC.h  MainWindow.cc  MainWindow.cpp  MainWindow.h  Makefile.am  Makefile.in  MsgBox.cc  MsgWindow.cc  MsgWindow.h  TagList.h  TrayIcon.cc  TreeModelDnd.cc  TreeModelDnd.h  TreeViewTooltips.h  callclient.cc  callclient.h  config.xml  configure.ac  console.cc  console.h  fileclient.cc  main.cc  main_window.glade  msg_window.glade  talkmm.cc  talkmm.h
trunk/talkmm/talk/examples/talkmm/config/: rwxml.cc
trunk/talkmm/talk/examples/talkmm/themes/Afterhours/gtk-2.0/: gtkrc
trunk/talkmm/talk/examples/xxpalk/: Makefile.am  Makefile.am.b  Makefile.b  Makefile.in  Makefile_b  console.h
trunk/talkmm/talk/examples/xxpalk/xxpalk_ui/ui/: MyRenderer.java
(+123 files in other folders)
