SUBDIRS = src data po

EXTRA_DIST =                    \
        ChangeLog               \
	readme 			\
	autogen.sh 		\
        intltool-extract.in     \
        intltool-merge.in       \
        intltool-update.in

DISTCLEANFILES =                \
        intltool-extract        \
        intltool-merge          \
        intltool-update

